crates/ink/tests/ui/trait_def/fail/message_input_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeDecode` is not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:6:23
   |
6  |     fn message(&self, input: NonCodec);
   |                       ^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodec`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Arc<T>
             Box<T>
             Rc<T>
             sp_core::Bytes
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodec`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs
   |
   |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:5:5
   |
5  |     #[ink(message)]
   |     ^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             String
             Vec<T>
           and 2 others
   = note: required because of the requirements on the impl of `Encode` for `NonCodec`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
  --> $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |         T: scale::Encode,
   |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`

error[E0599]: the method `fire` exists for struct `CallBuilder<E, Set<Call<E>>, Set<ExecutionInput<ArgumentList<ink::ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<ReturnType<()>>>`, but its trait bounds were not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:5:5
   |
5  |     #[ink(message)]
   |     ^ method cannot be called on `CallBuilder<E, Set<Call<E>>, Set<ExecutionInput<ArgumentList<ink::ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<ReturnType<()>>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   | pub struct ArgumentList<Head, Rest> {
   | ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<ink::ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
